--- a/assets/main.css
+++ b/assets/main.css
@@ -174,7 +174,7 @@ p {
 
 .footer-link-cont {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
 }
 
 .footer-links {
