--- a/assets/main.css
+++ b/assets/main.css
@@ -9,12 +9,16 @@
 @charset "UTF-8";
 
 :root {
-  --secondary: #d5e6ff;
   --bkgd: #ffffff;
-  --txt-grey: #6d6d6d;
-  --txt-dark-grey: #4b4b4b;
-  --link-grey: #505050;
-  --strong-color: rgb(30, 89, 172);
+  --primary: #295939;
+  --secondary: #e2ffd6;
+  --bkgd-grey: #444;
+  --light-opacity: rgba(0,0,0,0.04);
+  --dark-opacity: rgba(0,0,0,0.08);
+  --txt-light-grey: rgb(110, 110, 110);
+  --txt-default: rgb(68, 68, 68);
+  --txt-med-grey: rgb(80, 80, 80);
+  --txt-off-white: rgb(230, 230, 230);
 }
 
 
@@ -22,7 +26,7 @@ body {
     font-family: 'Google+Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     background-color: var(--bkgd);
     text-align: left;
-    color: #444;
+    color: var(--txt-default);
     line-height: 1.6;
     font-size: 18px;
 }
@@ -83,14 +87,14 @@ p {
     height: 4px;
     width: 65px;
     display:block;
-    background-color: var(--strong-color);
+    background-color: var(--primary);
     border-radius: 2px;
     margin-top: 15px;
 }
 
 .button {
     border-radius: 15px;
-    background-color: var(--strong-color);
+    background-color: var(--primary);
     color: white;
     width: fit-content;
     padding: 0;
@@ -98,7 +102,7 @@ p {
 }
 
 .button-text {
-    color: rgb(230, 230, 230);
+    color: var(--txt-off-white);
     padding: 0 20px
 }
 
@@ -123,13 +127,13 @@ p {
 /* header */
 
 .navLink {
-    color: var(--link-grey);
+    color: var(--txt-med-grey);
     padding: 10px 10px;
     font-size: 0.9em
 }
 
 .navLink-mb {
-    color: var(--link-grey);
+    color: var(--txt-med-grey);
     font-size: 0.9em;
     padding: 5px 10px;
     border-radius: 2px;
@@ -138,7 +142,7 @@ p {
 .navLink-mb:hover {
     color: black;
     text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--dark-opacity);
 }
 
 #menu-button {
@@ -191,16 +195,10 @@ p {
     margin-right: -10px;
 }
 
-
-#mobile-navs {
-    background-color: #ebebeb;
-    font-size: 1.1em;
-}
-
 .navLinkTitle:hover, .navLink:hover {
     color: black;
     text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--dark-opacity);
     border-radius: 2px;
 }
 
@@ -228,10 +226,21 @@ p {
     padding: 10px 0;
 }
 
+.footer-navlink {
+    color: var(--primary);
+    padding: 0.2em 1em;
+}
+
+.footer-navlink:hover {
+    text-decoration: none;
+    color: var(--primary);
+    background-color: var(--dark-opacity);
+}
+
 .foot-container {
     color: white;
     padding: 40px 0;
-    background-color: #444;
+    background-color: var(--bkgd-grey);
 }
 
 
@@ -270,7 +279,7 @@ footer {
 }
 
 .control-label {
-    color: var(--txt-grey);
+    color: var(--txt-light-grey);
     font-weight: 400;
     font-size: 0.8em;
     margin: 0;
@@ -311,14 +320,14 @@ footer {
     justify-content: flex-start;
     width: 100%;
     padding-left: 0.6em;
-    background-color: rgba(0,0,0,0.04);
+    background-color: var(--light-opacity);
     cursor: pointer;
     border-radius: 2px;
     margin: 5px 0;
 }
 
 .text-with-arrow:hover {
-    background-color: rgba(0,0,0,0.08);
+    background-color: var(--dark-opacity);
 }
 
 
