--- a/assets/main.css
+++ b/assets/main.css
@@ -13,12 +13,12 @@
   --primary: #295939;
   --secondary: #ecf7e9;
   --bkgd-grey: #444;
+  --primary-light: #316b44;
   --light-opacity: rgba(0,0,0,0.04);
   --dark-opacity: rgba(0,0,0,0.08);
   --txt-light-grey: rgb(110, 110, 110);
   --txt-default: rgb(68, 68, 68);
   --txt-med-grey: rgb(80, 80, 80);
-  --txt-off-white: rgb(230, 230, 230);
 }
 
 
@@ -102,13 +102,17 @@ p {
 }
 
 .button-text {
-    color: var(--txt-off-white);
+    color: white;
     padding: 0 20px
 }
 
 .button-text:hover {
     text-decoration: none;
     color: white;
+}
+
+.button:hover {
+    background-color: var(--primary-light);
 }
 
 .italic {
@@ -249,6 +253,19 @@ footer {
     width: 100%;
 }
 
+.footer-txt {
+    color: white;
+    padding: 5px;
+    border-radius: 2px;
+    display: block;
+}
+
+.footer-txt:hover {
+    color: white;
+    text-decoration: none;
+    background-color: rgba(255,255,255,0.1);
+}
+
 
 
 /* model page */
@@ -296,8 +313,8 @@ footer {
     /* make sure visible above other elements */
 }
 
-#model-fig {
-    margin-top: 20px;
+.fig-cont {
+    margin: 20px 0;
 }
 
 .control-collapse-title {
@@ -330,6 +347,16 @@ footer {
     background-color: var(--dark-opacity);
 }
 
+
+/* data tables: */
+.table-container {
+    margin: 20px 0px;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
 
 /* Explanation page */
 
