--- a/assets/main.css
+++ b/assets/main.css
@@ -11,14 +11,14 @@
 :root {
   --bkgd: #ffffff;
   --primary: #295939;
-  --secondary: #ecf7e9;
+  --secondary: rgb(215, 231, 210);
   --bkgd-grey: #444;
   --primary-light: #316b44;
   --light-opacity: rgba(0,0,0,0.04);
   --dark-opacity: rgba(0,0,0,0.08);
   --txt-light-grey: rgb(110, 110, 110);
-  --txt-default: rgb(68, 68, 68);
   --txt-med-grey: rgb(80, 80, 80);
+  --txt-default: rgb(68, 68, 68);
 }
 
 
@@ -48,14 +48,14 @@ p {
     margin: 0 auto;
 }
 
-.nav-bar {
+/* .nav-bar {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
 
     align-content: center;
     justify-content: space-between;
-}
+} */
 
 .page-contents {
     padding: 40px 0 50px;
@@ -128,22 +128,28 @@ p {
 }
 
 
+
+
+
 /* header */
 
-.navLink {
+.navLink-dt {
     color: var(--txt-med-grey);
     padding: 10px 10px;
-    font-size: 0.9em
+    font-size: 0.9em;
+    border-radius: 2px;
+    text-align: center;
+    width: 160px;
 }
 
 .navLink-mb {
-    color: var(--txt-med-grey);
+    color: var(--txt-default);
     font-size: 0.9em;
     padding: 5px 10px;
     border-radius: 2px;
 }
 
-.navLink-mb:hover {
+.navLink-dt:hover, .navLink-mb:hover {
     color: black;
     text-decoration: none;
     background-color: var(--dark-opacity);
@@ -178,7 +184,7 @@ p {
     
     align-self: start;
     
-    padding-top: 12px;
+    padding-top: 2px;
 
     grid-row: 2;
     grid-column-start: 1;
@@ -187,23 +193,14 @@ p {
 
 
 .desktop-links {
-    margin: auto 0 auto auto;
+    margin: auto -20px auto auto;
     float: right;
     font-size: 1.1em;
-    text-decoration: none;
-    justify-content: space-between;
-    width: 300px;
-}
-
-.rightmost-link {
-    margin-right: -10px;
-}
-
-.navLinkTitle:hover, .navLink:hover {
-    color: black;
-    text-decoration: none;
-    background-color: var(--dark-opacity);
-    border-radius: 2px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    /* text-decoration: none; */
+    /* justify-content: space-between; */
+    /* width: 500px; */
 }
 
 .show-desktop {
@@ -277,10 +274,13 @@ footer {
 }
 
 .controls {
+    position: sticky;
+    top: 50px;
     background-color: var(--secondary);
     border-radius: 5px;
     padding: 10px;
     margin: 0 0 50px;
+    height: min-content;
 }
 
 .figure-cont {
@@ -372,7 +372,7 @@ footer {
 @media only screen and (min-width: 1024px){
     /* add styles for desktop */
     .show-desktop {
-        display: flex;
+        display: grid;
     }
 
     .hide-desktop {
@@ -431,6 +431,10 @@ footer {
 
     .page-contents {
         padding: 30px 0 120px;
+    }
+
+    .controls {
+        margin: 0;
     }
 
 }
