--- a/assets/main.css
+++ b/assets/main.css
@@ -93,7 +93,7 @@ p {
 }
 
 .small-text {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .fig-spinner {
@@ -176,6 +176,34 @@ p {
     display: block;
 }
 
+.button {
+    background-color: var(--primary);
+    border-radius: 25px;
+    color: white;
+    margin: 0.5em auto 0.5em 0;
+    padding: 0.2em 0;
+    text-align: center;
+    font-size: 20px;
+    width: 300px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: var(--primary-light);
+}
+
+.button-link-text {
+    color: white;
+}
+
+.button-link-text:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.mrgn-bttm-big {
+    margin-bottom: 40px;
+}
 
 /* end of UC */
 
@@ -425,11 +453,24 @@ footer {
 
 /* Explanation page */
 
-.image {
-    width: 90%;
-    margin: 20px auto;
+#explan-page {
+    max-width: 700px;
 }
 
+#diagram-image {
+    width: 100%;
+    max-width: 700px;
+}
+
+#eqn-image {
+    width: 100%;
+    max-width: 600px;
+}
+
+.image {
+    margin: 20px 0;
+    padding: 0 5px;
+}
 
 
 
@@ -487,7 +528,7 @@ footer {
     }
 
     .page-contents {
-        padding: 30px 0 120px;
+        padding: 50px 0 120px;
     }
 
     .controls {
@@ -517,6 +558,10 @@ footer {
 
     .wrapper, .header-wrapper, .footer-wrapper {
         max-width: 1200px;
+    }
+
+    #explan-page {
+        margin-left: 120px;
     }
 
 }
