--- a/assets/main.css
+++ b/assets/main.css
@@ -205,6 +205,15 @@ p {
     margin-bottom: 40px;
 }
 
+.one-col {
+    grid-template-columns: minmax(0, 1fr);
+}
+
+.two-cols {
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    grid-gap: 30px;
+}
+
 /* end of UC */
 
 
@@ -281,6 +290,10 @@ p {
     display: block;
 }
 
+.hide-mobile {
+    display: none;
+    visibility: hidden;
+}
 
 
 
@@ -433,6 +446,53 @@ footer {
     margin-right: 0;
 }
 
+#settings-wrapper {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: var(--light-opacity);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: 10px 10px 0 auto;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#settings-wrapper:hover {
+    background-color: var(--dark-opacity);
+}
+
+#settings-icon {
+    width: 40px;
+    height: 40px;
+}
+
+#settings-modal {
+    width: 300px;
+    margin-top: -50px;
+    margin-left: -150px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    padding: 10px;
+    align-content: end;
+    text-align: left;
+    z-index: 1;
+    background-color: var(--secondary);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    display: block;
+}
+
+#model-fig-wrapper {
+    display: grid;
+}
+
+
+
+
+
 
 /* ps page */
 
@@ -479,6 +539,11 @@ footer {
     /* add styles for desktop */
     .show-desktop {
         display: grid;
+    }
+
+    .show-desktop {
+        display: grid;
+        visibility: visible;
     }
 
     .hide-desktop {
@@ -562,6 +627,19 @@ footer {
 
     #explan-page {
         margin-left: 120px;
+    }
+
+}
+
+@media only screen and (min-width: 1500px){
+    /* add styles for large desktop */
+
+    .wrapper, .header-wrapper, .footer-wrapper {
+        max-width: 1400px;
+    }
+
+    #explan-page {
+        margin-left: 300px;
     }
 
 }
